--- a/index.html
+++ b/index.html
@@ -1,12 +1,142 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>COLMARACADEMY</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="..resources/css/style.css" type="text/css">
+      <title>COLMAR ACADEMY</title>
+      <!-- fonts -->
+      <!-- font-awesome -->
+      <!-- favicon
+       <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+       <link rel="icon" href="./resources/images/ic-logo.png" type="image/x-icon"> -->
+      <!-- reset -->
+      <!-- - [ ]   <meta name="description" content="Learn something new everyday. Build career skills in data science, software engineering, business, and more."> -->
+    <nav>
+      <ul>
+        <li>On campus</li>
+        <li>Online</li>
+        <li>For companies</li>
+        <li>Sign in</li>
+      </ul>
+    </nav>
+
   </head>
+
   <body>
+    <!-- page header -->
+    <header>
+      <div class="">
+      <img src="./resources/images/ic-logo.svg" alt="" />
+      <span id="logo-em">Colmar</span>
+      <span>Academy</span>
+    </div>
+    </header>
 
-  <link rel="stylesheet" href="..resurces/css/style.css" type="text/css">
 
+
+    <h1>Learn something new everyday</h1>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+
+      <button type="button" name="button">Start here</button>
+
+    <h3>Orientation date</h3>
+
+      <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+
+Read more
+
+    <h3>Our campus</h3>
+
+      <p>Find which campus is close to you</p>
+
+Read more
+
+    <h3>Our guest lecture</h3>
+      <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+
+Read more
+
+
+    <h2>It doesn't hurt to keep practicing</h2>
+
+      <quote>
+        "Curabitur vitae libero in ipsum porttior consequat. Aliqum et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat es. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligule."
+      </quote>
+
+      <footer>
+        <cite class="author">Emanuel</cite>, Sr Strategist at <cite class="company">Hiring.com</cite>
+      </footer>
+
+    <section class="courses">
+
+      <h2>Start learning</h2>
+
+        <h3>Software engineering</h3>
+
+          <h4>COURSES</h4>
+
+            <p>Web Development, Mobile Development, iOT, APIs</p>
+
+        <h3>Computer art</h3>
+
+          <h4>COURSES</h4>
+
+            <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation
+            </p>
+
+        <h3>Design</h3>
+
+          <h4>COURSES</h4>
+
+            <p>User Experience Design, User Research, Visual Design</p>
+
+        <h3>Data</h3>
+
+          <h4>COURSES</h4>
+
+            <p>Data Science, Big Data, SQL, Data Visualization</p>
+
+      <h3>Business</h3>
+
+          <h4>COURSES</h4>
+
+            <p>Product Development, Business Development, Startup</p>
+
+      <h3>Marketing</h3>
+
+          <h4>COURSES</h4>
+
+            <p>Analytics, Content Marketing, Mobile Marketing</p>
+
+    <section class="exhibits">
+
+      <h2>Thesis exhibits</h2>
+
+    <h3>Reimagine urban</h3>
+
+      <quote>
+        "Curabitur vitae libero in ipsum porttior consequat. Aliqum et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat es. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligule."
+      </quote>
+
+    <h3>Fisma: Design and more</h3>
+
+      <p>Designer showcase of new prototype product</p>
+
+    <h3>Now and then</h3>
+
+      <p>Research study about New York</p>
   </body>
+
+  <footer>
+    <nav>
+      <p>© 2016 Colmar Academy. All rights reserved</p>
+      <ul>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Privacy</a></li>
+      </ul>
+    </nav>
+  </footer>
+
 </html>
